--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Scissors</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,11 +17,11 @@
     <header>
       <img src="./images/Logo.png" alt="scissors Logo" />
       <ul>
-        <li class="url">My URLs</li>
-        <li>Features</li>
-        <li>Pricing</li>
-        <li>Analytics</li>
-        <li>FAQs</li>
+        <li><a href="">My URLs</a></li>
+        <li><a href="#Features">Features</a></li> 
+        <li><a href="#Pricing">Pricing</a></li> 
+        <li><a href="">Analytics</a></li> 
+        <li><a href="#FAQ">FAQs</a></li> 
       </ul>
       <div class="Login">
         <p>Log in</p>
@@ -72,11 +72,11 @@
           </li>
           <li>
             <h1>60M</h1>
-            <p>Link and QR code created</p>
+            <p>Link and QR <br /> codes created</p>
           </li>
           <li>
             <h1>1B</h1>
-            <p>Clicked and Scanned connections</p>
+            <p>Clicked and <br /> Scanned connections</p>
           </li>
           <li>
             <h1>300k</h1>
@@ -86,7 +86,7 @@
       </div>
     </section>
 
-    <section class="why-choose-scissors">
+    <section class="why-choose-scissors" id="Features">
       <div class="why-choose-scissors-header">
         <img src="./images/Line 70.png" alt="" />
         <h1>Why choose <span>Scissors</span></h1>
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <section class="price-perfect">
+    <section class="price-perfect" id="Pricing">
       <div class="price-perfect-header">
         <img src="./images/Line 70.png" alt="" />
         <h1>A <span>price perfect</span> for your needs.</h1>
@@ -257,7 +257,7 @@
       <img class="bottom-img" src="./images/Group 2 (1).png" alt="" />
     </section>
 
-    <section class="FAQ">
+    <section class="FAQ" id="FAQ">
       <img src="./images/FAQleft.png" alt="" />
       <div class="faq-header">
         <img src="./images/Line 70.png" alt="" />
