made the website responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </ul>
       <div class="Login">
         <p>Log in</p>
-        <button>Try for free</button>
+        <button> <a href="#form">Try for free</a> </button>
       </div>
     </header>
 
@@ -89,7 +89,7 @@
     <section class="why-choose-scissors" id="Features">
       <div class="why-choose-scissors-header">
         <img src="./images/Line 70.png" alt="" />
-        <h1>Why choose <span>Scissors</span></h1>
+        <h1>Why choose <span>Scissor</span></h1>
 
         <p>
           Scissors is the hub of everything that has to do with your link
@@ -236,16 +236,12 @@
       </div>
     </section>
 
-    <section class="form">
+    <section class="form" id="form">
       <img src="./images/Group 3 (1).png" alt="" />
       <form action="">
         <input type="text" placeholder="Paste URL here" />
-        <div>
-          <select name="choose-domain-name">
-            <option value="" disabled selected hidden>Choose Domain</option>
-          </select>
-          <input type="text" placeholder="Type Alias here" />
-        </div>
+        
+        <input type="text" placeholder="Type Alias here" />
 
         <button>Trim URL <img src="./images/magic wand.png" alt="" /></button>
         <p>
@@ -379,7 +375,7 @@
     </section>
 
     <footer>
-      <img src="./images/footer2.png" alt="" />
+      <img class="top-img" src="./images/footer2.png" alt="" />
       <div class="footer">
         <div class="logo">
           <img src="./images/Logo (1).png" alt="" />
