Added preventDefault method to the form

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
       <p id="alert" style="color: blue; margin-left: 10px;"></p>
 
-      <button onclick="UrlShortener()">
+      <button id="trimButton">
         Trim URL
         <img src="./images/magic wand.png" alt="" />
       </button>
