update the trim Buttom

--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@
 
         <p id="alert" style="color: blue; margin-left: 10px;"></p>
 
-        <button id="trimButton">
+        <!-- add a pointer-event: none  -->
+        <button disabled id="trimButton">
           Trim URL
           <img src="./images/magic wand.png" alt="" />
         </button>
