add some css for disabled button

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         <p id="alert" style="color: blue; margin-left: 10px;"></p>
 
         <!-- add a pointer-event: none  -->
-        <button disabled id="trimButton">
+        <button class="disabled" disabled id="trimButton">
           Trim URL
           <img src="./images/magic wand.png" alt="" />
         </button>
